parser.py
import sys
import ply.lex as lex
import ply.yacc as yacc
import lexer
from sys import argv
from symbol_table import *
from threeAddressCode import *
from termcolor import colored, cprint

ST = SymbolTable()
TAC = ThreeAddressCode()

variables = { }       # Dictionary of stored variables
errors_list = []

tokens = lexer.tokens
lexer = lexer.lexer

errorFlag = False

precedence = (
('left', 'CLOSE_PAREN'),
('right', 'ELSE'),
)

def error(errorType, errorMessage, errorLine=None):
    global errorFlag
    errorFlag = True
    cprint('Error:', 'red', end= ' ')
    if errorLine:
        cprint(str(errorLine), 'red', end= ' ')
    cprint(' ::', 'red', end= ' ')
    cprint(errorMessage, 'red')

def warning(warningType, warningMessage, warningLine=None):
    cprint('Warning:', 'yellow', end= ' ')
    if warningLine:
        cprint(str(warningLine), 'yellow', end=' ')
    cprint(warningMessage, 'yellow')

def showCompilationStatus():
    if errorFlag:
        cprint('Compilation Failed', 'red')
    else:
        cprint('Compilation Successful', 'green')

def getWidthForArgtypelist(argtypelist, uppertypelist):
    dic = {"int":4,"double":8,"bool":4,"char":4}
    widthlist = []
    width = 0
    for i in range(len(argtypelist)):
        item = argtypelist[i]
        widthlist.append(width)
        if uppertypelist[i] != 'simple':
            width+=4
        else:
            width+=dic.get('item',4)
    return widthlist

def p_compilation_unit(p):
    ''' compilation-unit :         class-declarations-opt
             |         statement-list
             ''' #remove method declaration from statement-list at the end
    mainclass = ST.mainClass()
    if mainclass:
        TAC.emit('','',mainclass.name+'_Main','jumplabel')
    else:
        error('badStructure', 'Main function not found', str(p.lexer.lineno))
    TAC.emit('','','','exit')

def p_semi_opt(p):
    ''' semi-opt :         DELIM
             |         empty
             '''
    p[0] = p[1]

def p_class_declarations_opt(p):
    ''' class-declarations-opt :         class-declarations
             |         empty
             '''
    p[0]=p[1]

def p_class_declarations(p):
    ''' class-declarations :         class-declaration
             |         class-declarations class-declaration
             '''
    p[0]=p[1]

def p_class_declaration(p):
    ''' class-declaration :          class-header class-body semi-opt
             '''
    ST.end_scope()

def p_class_header(p):
    ''' class-header : CLASS IDENTIFIER COLON class-type
             |         CLASS IDENTIFIER
             '''
    dic = {"int":4,"double":8,"bool":4,"char":4}
    if ST.searchClass(p[2]):
        error('Class error','Class already declared',str(p.lexer.lineno))
    else:
        if len(p) == 5:
            if ST.searchClass(p[4]['type']):
                ST.begin_scope(p[2],'classType',parentClass=p[4]['type'])
                parentclass=ST.searchClass(p[4]['type'])
                for varname in parentclass.varlist:
                    width=parentclass.varlist[varname]['width']
                    if parentclass.varlist[varname]['uppertype'] == 'array':
                        width=width/dic[parentclass.varlist[varname]['type']]
                    var = ST.addvar(varname, parentclass.varlist[varname]['type'],parentclass.varlist[varname]['uppertype'],width)
                    var['modifier'] = parentclass.varlist[varname].get('modifier','public')
            else:
                error('Class error','Base class not declared',str(p.lexer.lineno)) 
        else:
            ST.begin_scope(p[2],'classType')

def p_class_type(p):
    ''' class-type :         IDENTIFIER
             '''
    p[0] = {}
    p[0]['type']=p[1]
    p[0]['uppertype']='class'

def p_class_body(p):
    ''' class-body :         BLOCK_BEGIN class-member-declarations-opt BLOCK_END
             '''
    p[0]={}

def p_class_member_declarations_opt(p):
    ''' class-member-declarations-opt :         class-member-declarations
             |         empty
             '''
    p[0]={}

def p_class_member_declarations(p):
    ''' class-member-declarations :         class-member-declaration
             |         class-member-declarations class-member-declaration
             '''
    p[0]={}

def p_class_member_declaration(p):
    ''' class-member-declaration :         constant-declaration
             |         field-declaration
             |         method-declaration
             |         constructor-declaration
             '''
    p[0]=p[1]

def p_constant_declaration(p):
    ''' constant-declaration :         CONST simple-type constant-declarators DELIM
             '''
    for identifier in p[3]:
        if ST.lookupvar_curr(identifier['identifier_name']):
            error('alreadyDeclared','Constant already declared', str(p.lexer.lineno))
        elif ST.searchFunc(identifier['identifier_name']):
            error('alreadyDeclared','A function of the same name exists',str(p.lexer.lineno))
        else:
            if identifier.get('uppertype','simple') != 'simple':
                error('type Error','Constants have to be simple type',str(p.lexer.lineno))
            elif identifier['type']==p[2]['type']:
                newVar = ST.addvar(identifier['identifier_name'], p[2]['type'])
                newVar['isConstant']=True
                TAC.emit(newVar['place'], identifier['place'],'', '=')
            else:
                error('typeError','Type mismatch in constant declaration', str(p.lexer.lineno))
    

def p_constant_declaration_mod(p):
    ''' constant-declaration :         modifier CONST simple-type constant-declarators DELIM
             '''
    for identifier in p[4]:
        if ST.lookupvar_curr(identifier['identifier_name']):
            error('alreadyDeclared','Constant already declared', str(p.lexer.lineno))
        elif ST.searchFunc(identifier['identifier_name']):
            error('alreadyDeclared','A function of the same name exists',str(p.lexer.lineno))
        else:
            if identifier.get('uppertype','simple') != 'simple':
                error('type Error','Constants have to be simple type',str(p.lexer.lineno))
            elif identifier['type']==p[3]['type']:
                newVar = ST.addvar(identifier['identifier_name'], p[3]['type'])
                newVar['isConstant']=True
                newVar['modifier']=p[1]
                TAC.emit(newVar['place'], identifier['place'], '', '=')
            else:
                error('typeError','Type mismatch in constant declaration', str(p.lexer.lineno))
    
# simple-type : {'type' : }
# array-type  : {'type' : , 'array' : True, size : ''}
# class-type  : { }
def p_type(p):
    ''' type :         simple-type
             |         class-type
             |         array-type
             '''
    p[0] = p[1]

def p_simple_type(p):
    ''' simple-type :         BOOL
             |         INT
             |         UINT
             |         CHAR
             |         DOUBLE
             |         STRING
             '''
    p[0] = {'type' : p[1], 'uppertype': 'simple'}

def p_array_type(p):
    ''' array-type :         simple-type OPEN_BRACKET ICONST CLOSE_BRACKET
             '''
    p[0] = p[1]
    p[0]['uppertype'] = 'array'
    p[0]['array'] = True
    p[0]['size'] = p[3]
    if int(p[3]) < 0:
        error('badDeclaration', 'Array index cannot be negative', str(p.lexer.lineno))

def p_constant_declarators(p):
    ''' constant-declarators :         constant-declarator
             |         constant-declarators COMMA constant-declarator
             '''
    if len(p) == 2:
        p[0] = [p[1]]
    elif len(p) == 4:
        p[0] = p[1] + [p[3]]

def p_constant_declarator(p):
    ''' constant-declarator :         IDENTIFIER ASSIGN expression
             '''
    p[0] = { 'identifier_name' : p[1], 'place' : p[3]['place'], 'type' : p[3]['type']}

# {'type' : , 'place' : }
def p_expression(p):
    ''' expression :         conditional-expression
             |         assignment
             '''
    p[0] = p[1]

def p_conditional_expression(p):
    ''' conditional-expression :         conditional-or-expression
             |         conditional-or-expression CONDOP expression COLON expression
             '''
    if len(p) == 2:
        p[0] = p[1]
    elif len(p) == 6:   #Condop implemented
        if p[1]['type']!='bool':
            error('typeError', 'condop should have boolean expression', str(p.lexer.lineno))
        elif p[3]['type']!=p[5]['type']:
            error('typeError', 'condop should have same type in both expressions', str(p.lexer.lineno))
        else:
            p[0]={}
            p[0]['place']=ST.gentmp(p[3]['type'])
            p[0]['type']=p[3]['type']
            nextquad=TAC.getNextQuad()
            TAC.emit(p[1]['place'],0,nextquad+3,'cond_goto')
            TAC.emit(p[0]['place'],p[3]['place'],'','=')
            nextquad=TAC.getNextQuad()
            TAC.emit('','',nextquad+2,'goto')
            TAC.emit(p[0]['place'],p[5]['place'],'','=')

def p_conditional_or_expression(p):
    ''' conditional-or-expression :         conditional-and-expression
             |         conditional-or-expression M_or LOGOR conditional-and-expression
             '''
    if len(p) == 2:
        p[0] = p[1]
    elif len(p) == 5:   # TODO : Implement backpatching
        p[0] = {}
        if p[1]['type'] == p[4]['type'] == 'bool':
            p[0]['type'] = 'bool'
            p[0]['place'] = ST.gentmp('bool')
            TAC.emit(p[0]['place'],p[4]['place'],'','=')
            plc = [TAC.getNextQuad()]
            TAC.emit('','',-1,'goto')
            #place=ST.gentmp('bool')
            TAC.backpatch(p[2],TAC.getNextQuad())
            TAC.emit(p[0]['place'],1,'','=dec')
            TAC.backpatch(plc,TAC.getNextQuad())
        else:
            error('typeError', 'Incorrect type in LOGOR expression', str(p.lexer.lineno))
            p[0]['type'] = 'typeError'

def p_M_or(p):
    ''' M_or : empty
             '''
    place=ST.gentmp('bool')
    TAC.emit(place,1,'','=dec')
    p[0] = [TAC.getNextQuad()]
    TAC.emit(p[-1]['place'],place,-1,'cond_goto')


def p_M_and(p):
    ''' M_and : empty
             '''
    place=ST.gentmp('bool')
    TAC.emit(place,0,'','=dec')
    p[0] = [TAC.getNextQuad()]
    TAC.emit(p[-1]['place'],place,-1,'cond_goto')

def p_conditional_and_expression(p):
    ''' conditional-and-expression :         inclusive-or-expression
             |         conditional-and-expression M_and LOGAND inclusive-or-expression
             '''
    if len(p) == 2:
        p[0] = p[1]
    elif len(p) == 5:   # TODO : Implement backpatching
        p[0] = {}
        if p[1]['type'] == p[4]['type'] == 'bool':
            p[0]['type'] = 'bool'
            p[0]['place'] = ST.gentmp('bool')
            TAC.emit(p[0]['place'],p[4]['place'],'','=')
            plc = [TAC.getNextQuad()]
            TAC.emit('','',-1,'goto')
            #place=ST.gentmp()
            TAC.backpatch(p[2],TAC.getNextQuad())
            TAC.emit(p[0]['place'],0,'','=dec')
            TAC.backpatch(plc,TAC.getNextQuad())
        else:
            error('typeError', 'Incorrect type in LOGOR expression', str(p.lexer.lineno))
            p[0]['type'] = 'typeError'

def p_inclusive_or_expression(p):
    ''' inclusive-or-expression :         exclusive-or-expression
             |         inclusive-or-expression BITOR exclusive-or-expression
             '''
    if len(p) == 2:
        p[0] = p[1]
    elif len(p) == 4:
        p[0] = {}
        if p[1]['type'] == p[3]['type'] == 'int':
            p[0]['type'] = 'int'
        else:
            p[0]['type'] = 'typeError'
            error('typeError', 'Incorrect type in BITOR expression', str(p.lexer.lineno))
        p[0]['place'] = ST.gentmp(p[0]['type'])
        TAC.emit(p[0]['place'], p[1]['place'], p[3]['place'], p[2])

def p_exclusive_or_expression(p):
    ''' exclusive-or-expression :         and-expression
             |         exclusive-or-expression BITXOR and-expression
             '''
    if len(p) == 2:
        p[0] = p[1]
    elif len(p) == 4:
        p[0] = {}
        if p[1]['type'] == p[3]['type'] == 'int':
            p[0]['type'] = 'int'
        else:
            p[0]['type'] = 'typeError'
            error('typeError', 'Incorrect type in BITXOR expression', str(p.lexer.lineno))
        p[0]['place'] = ST.gentmp(p[0]['type'])
        TAC.emit(p[0]['place'], p[1]['place'], p[3]['place'], p[2])

def p_and_expression(p):
    ''' and-expression :         equality-expression
             |         and-expression BITAND equality-expression
             '''
    if len(p) == 2:
        p[0] = p[1]
    elif len(p) == 4:
        p[0] = {}
        if p[1]['type'] == p[3]['type'] == 'int':
            p[0]['type'] = 'int'
        else:
            p[0]['type'] = 'typeError'
            error('typeError', 'Incorrect type in BITAND expression', str(p.lexer.lineno))
        p[0]['place'] = ST.gentmp(p[0]['type'])
        TAC.emit(p[0]['place'], p[1]['place'], p[3]['place'], p[2])

def p_equality_expression(p):
    ''' equality-expression :         relational-expression
             |         equality-expression EQ relational-expression
             |         equality-expression NE relational-expression
             '''
    if len(p) == 2:
        p[0] = p[1]
    elif len(p) == 4:
        p[0] = {}
        if p[1]['type'] == p[3]['type'] and p[1]['type'] in ['int', 'double']:
            p[0]['type'] = 'bool'
        else:
            p[0]['type'] = 'typeError'
            error('typeError', 'Incorrect type in Equality expression', str(p.lexer.lineno))
        p[0]['place'] = ST.gentmp(p[0]['type'])
        TAC.emit(p[0]['place'], p[1]['place'], p[3]['place'], p[2])

def p_relational_expression(p):
    ''' relational-expression :         shift-expression
             |         relational-expression LT shift-expression
             |         relational-expression GT shift-expression
             |         relational-expression LE shift-expression
             |         relational-expression GE shift-expression
             '''
    if len(p) == 2:
        p[0] = p[1]
    elif len(p) == 4:
        p[0] = {}
        if p[1]['type'] == p[3]['type'] and p[1]['type'] in ['int', 'double']:
            p[0]['type'] = 'bool'
        else:
            p[0]['type'] = 'typeError'
            error('typeError', 'Incorrect type in Relational expression', str(p.lexer.lineno))

        p[0]['place'] = ST.gentmp(p[0]['type'])
        TAC.emit(p[0]['place'], p[1]['place'], p[3]['place'], p[2])

def p_shift_expression(p):
    ''' shift-expression :         additive-expression
             |         shift-expression LSHIFT additive-expression
             |         shift-expression RSHIFT additive-expression
             '''
    if len(p) == 2:
        p[0] = p[1]
    elif len(p) == 4:
        p[0] = {}
        if p[1]['type'] == p[3]['type'] == 'int':
            p[0]['type'] = 'int'
        else:
            p[0]['type'] = 'typeError'
            error('typeError', 'Incorrect type in Shift expression', str(p.lexer.lineno))

        p[0]['place'] = ST.gentmp(p[0]['type'])
        TAC.emit(p[0]['place'], p[1]['place'], p[3]['place'], p[2])

def p_additive_expression(p):
    ''' additive-expression :         multiplicative-expression
             |         additive-expression PLUS multiplicative-expression
             |         additive-expression MINUS multiplicative-expression
             '''
    if len(p) == 2:
        p[0] = p[1]
    elif len(p) == 4:
        p[0] = {}
        if p[1]['type'] == p[3]['type'] and p[1]['type'] in ['int', 'double']:
            p[0]['type'] = p[1]['type']
        else:
            p[0]['type'] = 'typeError'
            error('typeError', 'Incorrect type in Additive expression', str(p.lexer.lineno))
        p[0]['place'] = ST.gentmp(p[0]['type'])
        TAC.emit(p[0]['place'], p[1]['place'], p[3]['place'], p[2])

def p_multiplicative_expression(p):
    ''' multiplicative-expression :         unary-expression
             |         multiplicative-expression TIMES unary-expression
             |         multiplicative-expression DIV unary-expression
             |         multiplicative-expression MOD unary-expression
             '''
    if len(p) == 2:
        p[0] = p[1]
    elif len(p) == 4:
        p[0] = {}
        if p[1]['type'] == p[3]['type'] == 'int':
            p[0]['type'] = p[1]['type']
        elif p[1]['type'] == p[3]['type'] == 'double' and p[2] in ['*','/']:
            p[0]['type'] = p[1]['type']
        else:
            p[0]['type'] = 'typeError'
            error('typeError', 'Incorrect type in Multiplicative expression', str(p.lexer.lineno))
        p[0]['place'] = ST.gentmp(p[0]['type'])
        TAC.emit(p[0]['place'], p[1]['place'], p[3]['place'], p[2])

def p_unary_expression_prim(p):
    ''' unary-expression :         primary-expression
             '''
    p[0] = p[1]

def p_unary_expression_op(p):
    ''' unary-expression :         PLUS unary-expression
             |         MINUS unary-expression
             |         BITNOT unary-expression
             |         BITCOMP unary-expression
             '''
    if p[2]['type'] in ['int', 'double'] and p[1] == '+':
        p[0] = p[2]
    elif p[2]['type'] in ['int', 'double'] and p[1] in ['~', '-']:
        p[0] = {}
        p[0]['type'] = p[2]['type']
        p[0]['place'] = ST.gentmp(p[0]['type'])
        if p[1] == '~':
            TAC.emit(p[0]['place'],p[2]['place'], '', p[1])
        else:
            TAC.emit(p[0]['place'],p[2]['place'], '', p[1]+'unary')
    elif p[2]['type'] in ['bool'] and p[1] in ['!']:
        p[0] = {}
        p[0]['type'] = p[2]['type']
        p[0]['place'] = ST.gentmp(p[0]['type'])
        TAC.emit(p[0]['place'],p[2]['place'],'',p[1])
    else:
        error('typeError', 'Unary expression type mismatch', str(p.lexer.lineno))

def p_primary_expression(p):
    ''' primary-expression :         primary-no-array-creation-expression
             '''
    p[0] = p[1]

def p_expression_list(p):
    ''' expression-list :         expression
             |         expression-list COMMA expression
             '''
    if len(p) == 2:
        p[0] = [p[1]]
    elif len(p) == 4:
        p[0] = p[1] + [p[3]]

def p_array_initializer(p):
    ''' array-initializer :         BLOCK_BEGIN variable-initializer-list-opt BLOCK_END
             '''
    p[0] = p[2]

def p_variable_initializer_list_opt(p):
    ''' variable-initializer-list-opt :         expression-list
             |         empty
             '''
    p[0] = p[1]

def p_variable_initializer(p):
    ''' variable-initializer :         expression
             |         array-initializer
             '''
    p[0] = p[1]

def p_primary_no_array_creation_expression_literal(p):
    ''' primary-no-array-creation-expression :         literal
             '''
    if p[1]['type'] != 'string':
        p[0] = { 'type': p[1]['type']}
        p[0]['place'] = ST.gentmp(p[0]['type'])
        TAC.emit(p[0]['place'], p[1]['value'], '', '=dec')
    else:
        p[0] = { 'type': p[1]['type']}
        p[0]['place'] = ST.genstring()
        ST.addString(p[0]['place'], p[1]['value'])

def p_primary_no_array_creation_expression_identifier(p):
    ''' primary-no-array-creation-expression :         IDENTIFIER
             '''
    var = ST.lookupvar(p[1])
    if not var:
        var=ST.lookupvar_Class(p[1])
        if not var:
            error('undefinedVariable', 'Identifier Used before initialization', str(p.lexer.lineno))
        else:
            p[0]={}
            p[0]['place']=ST.gentmp(var['type'])
            p[0]['type']=var['type']
            TAC.emit(p[0]['place'],var['place'],'','=_derefload')
    else:
        p[0] = var

def p_primary_no_array_creation_expression_element(p):
    ''' primary-no-array-creation-expression :         element-access
             '''
    p[0] = {}
    p[0]['type']=p[1]['var']['type']
    p[0]['place']=ST.gentmp(p[0]['type'])
    if p[1].get('fromclass',False):
        TAC.emit(p[0]['place'],p[1]['var']['place']+'|'+p[1]['exp']['place'],'','=arr_derefload')
    else:
        TAC.emit(p[0]['place'],p[1]['var']['place']+'|'+p[1]['exp']['place'],'','=arr')

def p_primary_no_array_creation_expression_parenthesized(p):
    ''' primary-no-array-creation-expression :         parenthesized-expression
             '''
    p[0] = p[1]

def p_primary_no_array_creation_expression_member(p):
    ''' primary-no-array-creation-expression :         member-access
             '''
    p[0]={}
    var = p[1]['var']
    member = p[1]['member']
    p[0]['place']=ST.gentmp(member['type'])
    p[0]['type']=member['type']
    TAC.emit(p[0]['place'],var['place']+"@"+member['place'], '', '=_obj')# TODO for member access

def p_primary_no_array_creation_expression_invocation(p):
    ''' primary-no-array-creation-expression :         invocation-expression
             '''
    p[0] = p[1]


def p_primary_no_array_creation_expression_object(p):
    ''' primary-no-array-creation-expression :        object-creation-expression
             '''
    p[0] = p[1]


def p_object_creation_expression(p):
    ''' object-creation-expression : NEW class-type OPEN_PAREN argument-list-opt CLOSE_PAREN
    '''
    p[0]={}
    classname=ST.searchClass(p[2]['type'])
    if classname:
        place=ST.gentmp('int')
        TAC.emit(place,'',classname.width,'=alloc')
        p[0]['place']=place
        p[0]['type']=classname.name
        p[0]['uppertype']='class'
    else:
        error("Class error","Class not declared",str(p.lexer.lineno))

def p_parenthesized_expression(p):
    ''' parenthesized-expression :         OPEN_PAREN expression CLOSE_PAREN
             '''
    p[0]=p[2]

def p_member_access(p):
    ''' member-access :         IDENTIFIER DOT IDENTIFIER
             '''
    p[0] = {}
    var=ST.lookupvar(p[1])
    if var:
        if var['uppertype']=='class':
            member = ST.isvarinClass(p[3],var['type'])
            if member:
                if member.get('modifier','public')=="public":
                    p[0]['var']=var
                    p[0]['member']=member
                else:
                    error("access error","variable access not permitted",str(p.lexer.lineno))                
            else:
                error('access error', 'Class member not defined', str(p.lexer.lineno))
        else:
            error("access error",p[1]+" not an object type",str(p.lexer.lineno))
    else:
        error("access error",p[1]+" object not found",str(p.lexer.lineno))
        


def p_invocation_expression_1(p):
    ''' invocation-expression :         IDENTIFIER OPEN_PAREN argument-list-opt CLOSE_PAREN
             '''
    p[0] = {}
    funcEnv = ST.searchFunc(p[1])
    if funcEnv:
        argtypelist = []
        uppertypelist = []
        for argument in p[3]:
            argtypelist.append(argument['type'])
            uppertypelist.append(argument.get('uppertype','simple'))
        if funcEnv.argtypelist == argtypelist and uppertypelist == funcEnv.uppertypelist:
            # Print function parameters
            TAC.emit("@self",'',str(funcEnv.Class)+'_'+p[1],'param')
            widthlist = getWidthForArgtypelist(argtypelist, uppertypelist)
            for i in range(len(p[3])):
                argument = p[3][i]
                TAC.emit(argument['place'],widthlist[i],str(funcEnv.Class)+'_'+p[1],'param')
            # Jump to function
            TAC.emit('', '', str(funcEnv.Class)+'_'+p[1], 'jumplabel')
            p[0]['type'] = funcEnv.returnType
            if (funcEnv.returnType != 'void'):
                p[0]['place'] = ST.gentmp(p[0]['type'])
                TAC.emit('','',p[0]['place'],'getreturn')
        else:
            error('incorrectArgumentTypeList', 'Incorrect argument types in function call', str(p.lexer.lineno))
    else:
        error('undefinedFunction', 'Function not defined', str(p.lexer.lineno))
